fix(custom): 制定商品

--- a/src/i18n/lang/index.json
+++ b/src/i18n/lang/index.json
@@ -41903,5 +41903,10 @@
 		"zh-cn": "长度不超过20个字符",
 		"en": "",
 		"zh-tw": ""
+	},
+	"1ubti7": {
+		"zh-cn": " 选择商品",
+		"en": "",
+		"zh-tw": ""
 	}
 }
